create new model static files

--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -1,8 +1,8 @@
 <html>
   <body>
-    <form action="/keyword/create" method="post">
+    <form action="/page/competitor" method="post">
       競合分析
-      <input name="url" type="text"></input>
+      <input name="page_url" type="text"></input>
       <input type="submit" value="検索">
     </form>
   </body>
