Implement the crawling so that it can be done from the screen.

--- a/views/keyword/insert.tmpl
+++ b/views/keyword/insert.tmpl
@@ -1,9 +1,7 @@
-<html>
-  <body>
+{{define "content"}}
     <h2>キーワード登録</h2>
     <form action="/keyword/create" method="post">
       <input name="word" type="text"></input>
       <input type="submit" value="投稿">
     </form>
-  </body>
-</html>
+{{end}}
