Draw a ranking graph

--- a/views/layout.tmpl
+++ b/views/layout.tmpl
@@ -29,6 +29,15 @@
 </head>
 
 <body class="hold-transition skin-red sidebar-mini">
+  <!-- jQuery 2.2.3 -->
+  <script src="../lib/assets/adminlte/plugins/jQuery/jquery-2.2.3.min.js"></script>
+  <!-- Bootstrap 3.3.6 -->
+  <script src="../lib/assets/adminlte/bootstrap/js/bootstrap.min.js"></script>
+  <!-- AdminLTE App -->
+  <script src="../lib/assets/adminlte/dist/js/app.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js">
+
+  </script>
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -312,16 +321,11 @@
 
 
   </div>
-  <!-- jQuery 2.2.3 -->
-  <script src="../lib/assets/adminlte/plugins/jQuery/jquery-2.2.3.min.js"></script>
-  <!-- Bootstrap 3.3.6 -->
-  <script src="../lib/assets/adminlte/bootstrap/js/bootstrap.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="../lib/assets/adminlte/dist/js/app.min.js"></script>
+
 
   <script>
   $(function () {
-    $(".select2").select2();
+    //$(".select2").select2();
   });
   </script>
 
