--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="box box-primary">
+<div class="box box-danger">
   <div class="box-header with-border">
     <h3 class="box-title">検索条件</h3>&nbsp;&nbsp;
   </div>
@@ -10,7 +10,7 @@
         <div class="form-group">
           URL
           <select name="page_id" class="form-control select2">
-            <option value="1">http://www.geocities.jp/m_hiroi/golang/abcgo12.html</option>
+            <option value="24">http://www.geocities.jp/m_hiroi/golang/abcgo12.html</option>
           </select>
         </div>
         <div class="form-group">
@@ -28,6 +28,83 @@
 <ul>
   {{range .}}
   <li>日にち{{.TargetDay}} 順位：{{.Rank}}</li>
+
+  <div class="box box-danger">
+  <div class="box-header with-border">
+    <h3 class="box-title">順位推移</h3>
+
+    <div class="box-tools pull-right">
+      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+      </button>
+      <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+    </div>
+  </div>
+  <div class="box-body">
+    <div class="chart">
+      <canvas id="canvas" height=400></canvas>
+    </div>
+  </div>
+  <!-- /.box-body -->
+</div>
+
+
+
+<script>
+
+  // とある4週間分のデータログ
+  var barChartData = {
+      labels: ["8/2", "8/3", "8/4", "8/5"],
+      datasets: [
+          {
+              type: 'line',
+              label: '順位',
+              data: [10,9,9,3],
+              borderColor : "rgba(254,97,132,0.8)",
+              backgroundColor : "rgba(254,97,132,0)",
+              yAxisID: "ctr",
+              tension: 0,
+          },
+      ],
+  };
+
+
+
+  var complexChartOption = {
+      responsive: true,
+      tooltipTitleFontStyle : "normal",
+      maintainAspectRatio: false,
+      tooltips:{mode: 'label'},
+      scales: {
+          yAxes: [{
+              id: "ctr",   // Y軸のID
+              type: "linear",   // linear固定
+              position: "left", // どちら側に表示される軸か？
+              ticks: {          // スケール
+                  max: 10,
+                  min: 0,
+                  stepSize: 1
+              },
+          }],
+      }
+  };
+
+  $(function() {
+      console.log('graph開始');
+      ctx = document.getElementById("canvas").getContext("2d");
+      ctx.fillStyle = "rgb(200,0,0)";
+      ctx.fillRect(20, 30, 60, 40);
+      window.myBar = new Chart(ctx, {
+          type: 'line',
+          data: barChartData,
+          options: complexChartOption
+      });
+      console.log('graph完了');
+  });
+
+
+</script>
+
+
   {{end}}
 </ul>
 {{end}}
