Completion of mock of page search function

--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -46,7 +46,31 @@
   <!-- /.box-body -->
 </div>
 
+<!--仮のフォーム-->
+<div class="box box-danger">
+  <div class="box-body">
+    <div class="form-group">
+      <div class="form-group">
+        <form action="/page/comparison" method="get">
+          <div class="form-group">
+            6/21<input type="checkbox" class="minimal">
+            6/28<input type="checkbox">
+            7/5<input type="checkbox">
+            7/12<input type="checkbox">
+            7/19<input type="checkbox">
+            7/26<input type="checkbox">
+            8/2<input type="checkbox">
+            8/9<input type="checkbox">
+            8/18<input type="checkbox">
+            8/23<input type="checkbox">
+          </div>
 
+          <input type="submit" value="比較" class="btn btn-md btn-primary">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script>
 
