--- a/views/keyword/crawl.tmpl
+++ b/views/keyword/crawl.tmpl
@@ -2,6 +2,6 @@
     <h2>キーワードを選択して下さい</h2>
     <form action="/crawl" method="post">
       <input name="keyword" type="text"></input>
-      <input type="submit" value="投稿">
+      <input type="submit" value="実行">
     </form>
 {{end}}
