Display html on comparison screen

--- a/views/page/comparison.tmpl
+++ b/views/page/comparison.tmpl
@@ -4,7 +4,7 @@
 <div class="row row-eq-height">
   {{range .}}
   <div class="col-md-6">
-    <!--<p>{{.TargetDay}}</p>-->
+    <p>{{.TargetDay}}</p>
     <pre><code class="prettyprint linenums">
     {{.HTML}}
     </code></pre>
