Correct the date order of the graph.

--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -77,8 +77,8 @@
   var days = new Array(1);
   var ranks = new Array(1);
   {{range .StaticFiles}}
-    ranks.unshift({{.Rank}});
-    days.unshift({{.TargetDay}})
+    ranks.push({{.Rank}});
+    days.push({{.TargetDay}})
   {{end}}
   var barChartData = {
       labels: days,
