--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -51,6 +51,9 @@
 
 <!--仮のフォーム-->
 <div class="box box-danger">
+  <div class="box-header with-border">
+    <h3 class="box-title">HTMLを比較したい日を2つ選択して下さい</h3>
+  </div>
   <div class="box-body">
     <div class="form-group">
       <div class="form-group">
@@ -72,6 +75,19 @@
 
 
 <script>
+//チェックボックスをクリックするとイベント発火
+$("input[type=checkbox]").click(function(){
+  var $count = $("input[type=checkbox]:checked").length;
+  var $not = $('input[type=checkbox]').not(':checked')
+
+  //チェックが2つ付いたら、チェックされてないチェックボックスにdisabledを加える
+  if($count >= 2) {
+    $not.attr("disabled",true);
+  }else{
+    //3つ以下ならisabledを外す
+    $not.attr("disabled",false);
+  }
+});
 
   // とある4週間分のデータログ
   var days = new Array(1);
