Add a style sheet named 'select 2'.

--- a/views/layout.tmpl
+++ b/views/layout.tmpl
@@ -14,11 +14,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../lib/assets/adminlte/dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="../lib/assets/adminlte/plugins/select2/select2.min.css">
+  <link rel="stylesheet" href="../lib/assets/adminlte/plugins/iCheck/all.css">
+  <link rel="stylesheet" href="../lib/assets/adminlte/plugins/iCheck/square/red.css">
+
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../lib/assets/adminlte/dist/css/skins/skin-red.min.css">
+
 
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,9 +41,10 @@
   <script src="../lib/assets/adminlte/bootstrap/js/bootstrap.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../lib/assets/adminlte/dist/js/app.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
+  <script src="../lib/assets/adminlte/plugins/select2/select2.min.js"></script>
+  <script src="../lib/assets/adminlte/plugins/iCheck/icheck.min.js"></script>
 
-  </script>
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -326,7 +332,7 @@
 
   <script>
   $(function () {
-    //$(".select2").select2();
+    $(".select2").select2();
   });
   </script>
 
