Move the y axis of graph vertically upside down.

--- a/views/page/search.tmpl
+++ b/views/page/search.tmpl
@@ -116,10 +116,10 @@
           id: "rank",   // Y軸のID
           type: "linear",   // linear固定
           position: "left", // どちら側に表示される軸か？
-          direction: -1,
           ticks: {          // スケール
             max: 1,
             min: 10,
+            reverse: true,
             stepSize: 1
           },
         }],
