--- a/views/page/comparison.tmpl
+++ b/views/page/comparison.tmpl
@@ -4,7 +4,8 @@
 <div class="row row-eq-height">
   {{range .}}
   <div class="col-md-6">
-    <p>{{.TargetDay}}</p>
+    <p>日付：{{.TargetDay}}</p>
+    <p>順位：{{.Rank}}</p>
     <pre><code class="prettyprint linenums">
     {{.HTML}}
     </code></pre>
